samples/_failures_safe/1761606831_00897b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff42d53f.c: In function ‘main’:
./samples/SAFE/__tmp_ff42d53f.c:174:11: error: expected ‘;’ at end of input
  174 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_ff42d53f.c:174:5: error: expected declaration or statement at end of input
  174 |     printf
      |     ^~~~~~
